# pdf2md

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: design.md  requirements.md
src/pdf2md/: __init__.py  agent.py  assembler.py  cli.py  config.py  streaming.py  task_manager.py
src/pdf2md/tools/: __init__.py  file_tools.py  image_analyzer.py  page_analyzer.py  pdf_to_image.py
src/pdf2md/web/: app.py
src/pdf2md/web/static/: index.html  task.html
tests/: conftest.py  test_agent.py  test_assembler.py  test_image_analyzer.py  test_pdf_to_image.py
